Allow tests to mock on Java 25